# 3DViewer_v2.0

./: .gitignore  .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  Untitled Diagram.drawio.html  compile_flags.txt  config.json  dvi.html
includes/Controller/: controller.hpp  icontroller.hpp  icontrollerinterface.hpp
includes/Model/: customtypes.hpp  datamanager.hpp  facademodel.hpp  ifacademodel.hpp  imagecapture.hpp  imodelviewer.hpp  model.hpp  modelviewer.hpp
includes/View/: imainmenuobserver.hpp  iwidgetopenglobserved.hpp  iwidgetopenglobserver.hpp  mainwindow.hpp  mywidgetopengl.hpp
lib/: CMakeLists.txt
lib/MatrixLib/: CMakeLists.txt
lib/MatrixLib/includes/: matrix.hpp
lib/MatrixLib/srcs/: matrix.cc
lib/QtGifImage/: CMakeLists.txt
srcs/: main.cc
srcs/Controller/: controller.cc
srcs/Model/: datamanager.cc  facademodel.cc  imagecapture.cc  model.cc  model.cpp  modelviewer.cc
srcs/View/: mainwindow.cc  mainwindow.ui  mywidgetopengl.cc
tests/: CMakeLists.txt
tests/includes/: tst_model_viewer.hpp
tests/srcs/: main.cc  tst_model_viewer.cc
